Add per-shard Redis circuit breakers